--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
     "graphql": "^14.2.1",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1",
-    "express": "^4.16.4",
-    "express-graphql": "^0.7.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
