--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
     "graphql": "^14.2.1",
+    "intact-vue": "^0.4.17",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
